Rename to force-calendar-interface

--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>forceCalendar UI - Enterprise Calendar Components</title>
+    <title>forceCalendar Interface - Enterprise Calendar Components</title>
     <style>
         * {
             margin: 0;
@@ -128,8 +128,8 @@
 </head>
 <body>
     <div class="header">
-        <h1>forceCalendar UI</h1>
-        <p class="subtitle">World-class calendar components powered by @forcecalendar/core</p>
+        <h1>forceCalendar Interface</h1>
+        <p class="subtitle">The official interface layer for @forcecalendar/core</p>
         <div>
             <span class="badge">Web Components</span>
             <span class="badge">Enterprise Clean</span>
@@ -192,10 +192,10 @@
 
         <div class="code-block">
             <span class="code-comment">// Install the packages</span><br>
-            npm install @forcecalendar/core @forcecalendar/ui<br><br>
+            npm install @forcecalendar/core @forcecalendar/interface<br><br>
 
             <span class="code-comment">// Import and use in your application</span><br>
-            <span class="code-keyword">import</span> { CalendarView } <span class="code-keyword">from</span> <span class="code-string">'@forcecalendar/ui'</span>;<br><br>
+            <span class="code-keyword">import</span> { CalendarView } <span class="code-keyword">from</span> <span class="code-string">'@forcecalendar/interface'</span>;<br><br>
 
             <span class="code-comment">// Just add the component to your HTML</span><br>
             &lt;force-calendar-view&gt;&lt;/force-calendar-view&gt;<br><br>
