--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <script type="module">
-        import './src/index.js';
+        import '/src/index.js';
         
         // Wait for calendar to be upgraded
         customElements.whenDefined('force-calendar').then(() => {
